[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/HUD/Decks/DrawPile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD/BattleScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HUD/Decks/ExhaustPile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD/Decks/DiscardPile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/EndTurnButton/EndTurnButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/RoundCounter/RoundCounter.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/HUD/HandManager/HandManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/BattleDeckEnergy/BattleDeckEnergy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/HUD/BattleBoard/BattleBoard.tscn" type="PackedScene" id=9]

[node name="BattleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 576.437, 440.138, 351.984, 24.2419, 263.698, 55.973 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 23.75, 935.507, 87.8138, 995.97 ]
}

[node name="BattleBoard" parent="." instance=ExtResource( 9 )]
margin_top = 56.0

[node name="Hand" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -125.0
margin_bottom = -125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandManager" parent="Hand" instance=ExtResource( 7 )]

[node name="DrawPile" parent="." instance=ExtResource( 1 )]
margin_left = 23.75
margin_top = -160.009
margin_right = 87.75
margin_bottom = -96.0092

[node name="DiscardPile" parent="." instance=ExtResource( 4 )]
margin_left = -88.493
margin_top = -160.009
margin_right = -24.493
margin_bottom = -96.0088

[node name="ExhaustPile" parent="." instance=ExtResource( 3 )]
margin_left = -88.493
margin_top = -248.016
margin_right = -24.493
margin_bottom = -184.016

[node name="EndTurnButton" parent="." instance=ExtResource( 5 )]
margin_left = -156.59
margin_top = -75.1985
margin_right = -28.5902
margin_bottom = -25.1985

[node name="BattleDeckEnergy" parent="." instance=ExtResource( 8 )]
margin_left = 24.0
margin_top = -247.814
margin_right = 88.0
margin_bottom = -183.814

[node name="RoundCounter" parent="." instance=ExtResource( 6 )]
margin_left = -87.9999
margin_top = -336.0
margin_right = -23.9999
margin_bottom = -287.675

[node name="EnemyPhaseTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="PlayerPhaseTimer" type="Timer" parent="."]
one_shot = true

[node name="ResolutionPhaseTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DrawCardTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ReshuffleCardTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="drew_card" from="DrawPile" to="." method="_on_DrawPile_drew_card"]
[connection signal="empty" from="DrawPile" to="." method="_on_DrawPile_empty"]
[connection signal="drew_card" from="DiscardPile" to="." method="_on_DiscardPile_drew_card"]
[connection signal="empty" from="DiscardPile" to="." method="_on_DiscardPile_empty"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="timeout" from="EnemyPhaseTimer" to="." method="_on_EnemyPhaseTimer_timeout"]
[connection signal="timeout" from="PlayerPhaseTimer" to="." method="_on_PlayerPhaseTimer_timeout"]
[connection signal="timeout" from="ResolutionPhaseTimer" to="." method="_on_ResolutionPhaseTimer_timeout"]
[connection signal="timeout" from="DrawCardTimer" to="." method="_on_DrawCardTimer_timeout"]
[connection signal="timeout" from="ReshuffleCardTimer" to="." method="_on_ReshuffleCardTimer_timeout"]
